--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@babel/preset-env": "^7.23.8",
     "@babel/preset-react": "^7.23.3",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.4",
     "babel-loader": "^9.1.3",
     "chalk": "^2.4.2",
     "css-loader": "^6.9.0",
@@ -21,6 +24,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "style-loader": "^3.3.4",
+    "svg-url-loader": "^8.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-middleware": "^7.0.0",
