--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --config webpack.dev.config.js --open"
   },
   "keywords": [],
   "author": "",
@@ -18,11 +19,12 @@
     "babel-loader": "^9.1.3",
     "chalk": "^2.4.2",
     "css-loader": "^6.9.0",
+    "devextreme": "^23.2.3",
     "express": "^4.18.2",
     "html-webpack-plugin": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1",
+    "react-router-dom": "^6.21.2",
     "style-loader": "^3.3.4",
     "svg-url-loader": "^8.0.0",
     "url-loader": "^4.1.1",
