--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.4",
+    "@mui/x-date-pickers": "^6.19.0",
     "babel-loader": "^9.1.3",
     "chalk": "^2.4.2",
     "css-loader": "^6.9.0",
+    "dayjs": "^1.11.10",
     "devextreme": "^23.2.3",
+    "devextreme-react": "^23.2.3",
     "express": "^4.18.2",
     "html-webpack-plugin": "^5.6.0",
     "react": "^18.2.0",
